fix body, hr, h. alignment

--- a/html/style.css
+++ b/html/style.css
@@ -51,13 +51,14 @@ body {
 header {
 	margin: auto;
 	text-align: center;
+	min-width: 24%;
+	max-width: 66%;
 }
 
 main {
 	flex-grow: 1;
 	margin: auto;
-	padding: 0 2em;
-	max-width: 30em;
+	max-width: min(30em, calc(100% - 4em));
 	text-align: justify;
 	text-justify: inter-word;
 	line-height: 1.3;
@@ -65,7 +66,7 @@ main {
 
 footer {
 	position: relative;
-	margin: 3rem auto 1rem;
+	margin: 0rem auto 1rem;
 	font-size: 60%;
 	text-align: center;
 }
@@ -75,7 +76,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2, h3, h4, h5, h6 {
-	padding-left: 2rem;
+	padding-left: calc(1rem + 100%/15);
+	margin-top: 2rem;
+	margin-bottom: 0.5rem;
+	font-style: italic;
 }
 
 sup {
@@ -140,7 +144,12 @@ footer .backlinks {
 }
 
 .head-rule {
-	margin: 1rem -2rem 2rem;
+	margin: 1rem auto 2rem;
+}
+
+.foot-rule {
+	margin: 2rem auto;
+	max-width: 80%;
 }
 
 .tabular {
